# hs-fsrs

./: CHANGELOG.md  LICENSE  README.md  hs-fsrs.cabal  suggested-bounds.patch
extra/: python-evaluation.py
src/: FSRS.hs
src/FSRS/: Card.hs  Parameters.hs  Rating.hs  ReviewLog.hs  Schedule.hs  Utils.hs
src/FSRS/Schedule/: Utils.hs
test/FSRS/: CardSpec.hs  Card_Spec.hs  ParametersSpec.hs  Parameters_Spec.hs  RatingSpec.hs  Rating_Spec.hs  ReviewLogSpec.hs  ScheduleQuickCheckSpec.hs  ScheduleSpec.hs  Schedule_QuickCheck_Spec.hs  Schedule_Spec.hs
