cabal-version:      3.0
name:               hs-fsrs
version:            0.1.0.0
synopsis:
    Haskell implementation of the Free Spaced Repetition Scheduler algorithm

-- description:
license:            MIT
license-file:       LICENSE
author:             Zachary D. Scott
maintainer:         zachary.douglas.scott@gmail.com
-- copyright:
category:           Algorithm
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  FSRS
                    , FSRS.Card
                    , FSRS.ReviewLog
                    , FSRS.Parameters
                    , FSRS.Rating
                    , FSRS.Schedule
    other-modules:   FSRS.Utils
    -- other-extensions:
    build-depends:    base ^>= 4.17.2.0
                    , time ^>= 1.14
                    , aeson ^>= 2.2.3.0
                    , vector
                    , scientific
                    , random
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hs-fsrs-test
    import:           warnings
    default-language: Haskell2010
    other-modules:   FSRS.Card_Spec
                   , FSRS.Parameters_Spec
                   , FSRS.Schedule_Spec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-tool-depends:  hspec-discover:hspec-discover
    build-depends:  base ^>=4.17.2.0
                  , bytestring
                  , hs-fsrs
                  , hspec
                  , time
                  , aeson

