cabal-version:      3.0
name:               hs-fsrs
version:            0.1.0.0
synopsis:
    Haskell implementation of the Free Spaced Repetition Scheduler algorithm

-- description:
license:            MIT
license-file:       LICENSE
author:             Zachary D. Scott
maintainer:         zachary.douglas.scott@gmail.com
-- copyright:
category:           Algorithm
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  FSRS
                    , FSRS.Card
                    , FSRS.Parameters
                    , FSRS.Rating
                    , FSRS.ReviewLog
                    , FSRS.Schedule
                    , FSRS.Schedule.Utils
    other-modules:   FSRS.Utils
    -- other-extensions:
    build-depends:    base >= 4.17.2.0 && <5
                    , aeson >= 2.2.3 && <2.3
                    , random >= 1.3.1 && <1.4
                    , scientific >=0.3.8 && <0.4
                    , time >= 1.12.2 && <1.13
                    , vector >= 0.13.2 && <0.14
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite hs-fsrs-test
    import:           warnings
    default-language: Haskell2010
    other-modules:   FSRS.CardSpec
                   , FSRS.ParametersSpec
                   , FSRS.RatingSpec
                   , FSRS.ReviewLogSpec
                   , FSRS.ScheduleQuickCheckSpec
                   , FSRS.ScheduleSpec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-tool-depends:  hspec-discover:hspec-discover
    build-depends:  base ^>=4.17.2.0
                  , QuickCheck
                  , aeson
                  , bytestring
                  , hs-fsrs
                  , hspec
                  , process
                  , time

